[#4] Add courses controller and specs
