# app/serializers/course_serializer.rb
@@ -1,0 +1,3 @@
+class CourseSerializer < ActiveModel::Serializer
+  attributes :id, :title, :author_id
+end
